# langchain-qualcomm-inference-suite

./: CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: qcom-preflight-checks.yml
docs/: chat.ipynb  llms.ipynb  provider.ipynb  text_embedding.ipynb  tools.ipynb
langchain_qualcomm_inference_suite/: __init__.py  chat_models.py  embeddings.py  llms.py  mixins.py
scripts/: check_imports.py  lint_imports.sh
tests/integration_tests/: test_chat_models.py  test_compile.py  test_embeddings.py
tests/unit_tests/: test_chat_models.py  test_embeddings.py
